<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avia_tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="well">Короче</string>
    <string name="subscribe">Подписка</string>
    <string name="profile">Профиль</string>
    <string name="finding_cheap_flights">Поиск дешевых авиабилетов</string>
    <string name="hint_from">Откуда-Москва</string>
    <string name="hint_to">Куда-Турция</string>
    <string name="flight_with_music">Музыкально отлететь</string>
    <string name="hard_path">Сложный маршрут</string>
    <string name="random">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
</resources>